@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <?pde?>
 <!-- generated with https://github.com/eclipse-cbi/targetplatform-dsl -->
-<target name="sirius_2019-12" sequenceNumber="1570003361">
+<target name="sirius_2019-12" sequenceNumber="1575458355">
   <locations>
     <location includeMode="planner" includeAllPlatforms="false" includeSource="true" includeConfigurePhase="false" type="InstallableUnit">
       <unit id="org.apache.log4j" version="0.0.0"/>
@@ -55,13 +55,15 @@
       <repository id="EEF-2.1.2" location="https://download.eclipse.org/modeling/emft/eef/updates/releases/2.1/R201909051307"/>
     </location>
     <location includeMode="planner" includeAllPlatforms="false" includeSource="true" includeConfigurePhase="false" type="InstallableUnit">
+      <unit id="org.eclipse.elk.sdk.feature.feature.group" version="0.0.0"/>
+      <unit id="org.eclipse.elk.sdk.feature.source.feature.group" version="0.0.0"/>
       <unit id="org.eclipse.elk.feature.feature.group" version="0.0.0"/>
       <unit id="org.eclipse.elk.feature.source.feature.group" version="0.0.0"/>
       <unit id="org.eclipse.elk.algorithms.feature.feature.group" version="0.0.0"/>
       <unit id="org.eclipse.elk.algorithms.feature.source.feature.group" version="0.0.0"/>
       <unit id="org.eclipse.elk.graphviz.feature.feature.group" version="0.0.0"/>
       <unit id="org.eclipse.elk.graphviz.feature.source.feature.group" version="0.0.0"/>
-      <repository id="ELK-0.5" location="http://download.eclipse.org/elk/updates/releases/0.5.0/"/>
+      <repository id="ELK-0.6" location="https://build.eclipse.org/modeling/elk/updates/0.6.0/"/>
     </location>
     <location includeMode="planner" includeAllPlatforms="false" includeSource="true" includeConfigurePhase="false" type="InstallableUnit">
       <unit id="org.eclipse.jetty.io" version="9.4.10.v20180503"/>
