@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <?pde?>
 <!-- generated with https://github.com/eclipse-cbi/targetplatform-dsl -->
-<target name="sirius_canary" sequenceNumber="1569480073">
+<target name="sirius_canary" sequenceNumber="1575458536">
   <locations>
     <location includeMode="planner" includeAllPlatforms="false" includeSource="true" includeConfigurePhase="false" type="InstallableUnit">
       <unit id="org.eclipse.license.feature.group" version="0.0.0"/>
@@ -73,6 +73,7 @@
     <location includeMode="planner" includeAllPlatforms="false" includeSource="true" includeConfigurePhase="false" type="InstallableUnit">
       <unit id="org.eclipse.elk.sdk.feature.feature.group" version="0.0.0"/>
       <unit id="org.eclipse.elk.sdk.feature.source.feature.group" version="0.0.0"/>
+      <unit id="org.eclipse.elk.feature.feature.group" version="0.0.0"/>
       <unit id="org.eclipse.elk.feature.source.feature.group" version="0.0.0"/>
       <unit id="org.eclipse.elk.algorithms.feature.feature.group" version="0.0.0"/>
       <unit id="org.eclipse.elk.algorithms.feature.source.feature.group" version="0.0.0"/>
