@@ -6,7 +6,9 @@ This document contains the release notes for recent major releases of Sirius. Se
 
 h2(#sirius6.3.1). Changes in Sirius 6.3.1
 
-Version 6.3.1 only differs from 6.3.0 on packaging (feature branding); the code itself is exactly the same.
+h3. Developer-Visible Changes
+
+* <span class="label label-info">Modified</span> Upgraded ELK version from 0.5.0 to 0.6.0, see the "ELK documentation":https://projects.eclipse.org/projects/modeling.elk/releases/0.6.0 for the list of changes in that version.
 
 h2(#sirius6.3.0). Changes in Sirius 6.3.0
 
